syntax = "proto3";

package signer;

option go_package = "github.com/ava-labs/avalanchego/proto/pb/signer";

service Signer {
  rpc PublicKey(PublicKeyRequest) returns (PublicKeyResponse) {}
  rpc Sign(SignatureRequest) returns (SignatureResponse) {}
  rpc SignProofOfPossession(ProofOfPossessionSignatureRequest) returns (ProofOfPossessionSignatureResponse) {}
}

message PublicKeyRequest {}
message PublicKeyResponse {
  bytes public_key = 1;
}
message SignatureRequest {
  bytes message = 1;
}
message SignatureResponse {
  bytes signature = 1;
}
message ProofOfPossessionSignatureRequest {
  bytes message = 1;
}
message ProofOfPossessionSignatureResponse {
  bytes signature = 1;
}
